[ADD] #60379 GDPR - Data privacy - Case

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3991,3 +3991,9 @@ th.sorting_disabled
     overflow-y: auto;
     direction: rtl;
 }
+
+div.chosen-container.chosen-container-multi.error {
+    border: 1px solid #ff0000;
+    border-radius: 4px;
+    background-color: #ffeeee;
+}
