--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EmptyInventorySettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EmptyInventorySettings.cshtml
@@ -4,7 +4,7 @@
 <script type="text/javascript">
     $(function () {
         var inventoryParameters = {
-            textModeId: '@FieldTypes.Text'
+            textModeId: '@((int)FieldTypes.Text)'
         };
 
         applyInventorySettingsBehavior(inventoryParameters);
