--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/InventorySettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/InventorySettings.cshtml
@@ -8,7 +8,7 @@
             settingsSavedSuccessfullyMessage: '@Translation.GetForJS("Settings saved successfully.")'
         };
         var inventoryParameters = {
-            textModeId: '@FieldTypes.Text'
+            textModeId: '@((int)FieldTypes.Text)'
         };
 
         applySettingsBehavior(parameters);
