--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/InventoryFieldSettingModelDefault.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/InventoryFieldSettingModelDefault.cshtml
@@ -5,5 +5,7 @@
 <td></td>
 <td>@Html.DisplayFor(m => m.PropertySize)</td>
 <td>@Html.CheckBoxFor(m => m.ShowInDetails, new { @class = "switchcheckbox" })</td>
-<td>@Html.CheckBoxFor(m => m.ShowInList, new { @class = "switchcheckbox" })</td>
+<td>@Html.CheckBoxFor(m => m.ShowInList, new {@class = "switchcheckbox"})</td>
+<td>@Html.TextBoxFor(m => m.XMLTag)</td>
+<td>@Html.CheckBoxFor(m => m.ReadOnly, new { @class = "switchcheckbox" })</td>
 <td></td>
