--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/GeneralFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/GeneralFieldsModel.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="span12">
             <table class="tableform">
-                @Html.EditorFor(m => m.Name, "Fields/Text")
+                @Html.EditorFor(m => m.Name, "Fields/Text", new { inputAttributes = new Dictionary<string, object> { { "maxlength", "60" } } })
                 @Html.EditorFor(m => m.Manufacturer, "Fields/Text")
                 @Html.EditorFor(m => m.Model, "Fields/Text")
                 @Html.EditorFor(m => m.SerialNumber, "Fields/Text")
