[FIX] #60169 using the sign \ causes trouble in the case.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -123,7 +123,7 @@
             PersonsEmail: @Html.Raw(Json.Encode(Model.case_.PersonsEmail)),
             PersonsCellphone: @Html.Raw(Json.Encode(Model.case_.PersonsCellphone)),
             Place: @Html.Raw(Json.Encode(Model.case_.Place)),
-            CostCentre: '@Model.case_.CostCentre'
+            CostCentre: '@Html.Raw(Json.Encode(Model.case_.CostCentre))'
         },
 
         casesScopeInitParameters: {
