[FIX] #60622 Reported time

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Reports/ReportedTime.rdl
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Reports/ReportedTime.rdl
@@ -315,7 +315,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Total records:</Value>
+                <Value>Total:</Value>
                 <Style />
               </TextRun>
             </TextRuns>
