--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3997,3 +3997,21 @@ div.chosen-container.chosen-container-multi.error {
     border-radius: 4px;
     background-color: #ffeeee;
 }
+
+.dh-success {
+    background: #dff0d8;
+    border-color: #d6e9c6;
+    color: #3c763d;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+
+.dh-error {
+    background: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 4px;
+}
