[ADD]#60540: Possibility to move case to customer without user rights. Issues fixed.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4015,3 +4015,7 @@ div.chosen-container.chosen-container-multi.error {
     margin: 20px 0;
     border-radius: 4px;
 }
+.dh-note {
+    font-weight: bold;
+    color: #a94442;
+}
