--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_MoveCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_MoveCase.cshtml
@@ -1,15 +1,13 @@
 ﻿@model DH.Helpdesk.Web.Models.Case.CaseMoveModel
 
 <div class="modal-header">
-<strong>@Translation.Get("Flytta", Enums.TranslationSource.TextTranslation) @Translation.Get("ärende", Enums.TranslationSource.TextTranslation)</strong>
+    <strong>@Translation.GetCoreTextTranslation("Flytta") @Translation.GetCoreTextTranslation("ärende")</strong>
 </div>
 <div class="modal-body">
+    <p>@Translation.GetCoreTextTranslation("Eventuella ändringar måste sparas innan du flyttar ärendet. Vill du flytta ärendet nu eller avbryta")?</p>
     <p>
-        @Translation.GetCoreTextTranslation("Eventuella ändringar måste sparas innan du flyttar ärendet. Vill du flytta ärendet nu eller avbryta")?
-    </p>
-    <p>
-        @Translation.Get("Kund", Enums.TranslationSource.TextTranslation): 
-        <select id="moveCaseToCustomerId" name="moveCaseToCustomerId" >
+        @Translation.GetCoreTextTranslation("Kund"):
+        <select id="moveCaseToCustomerId" name="moveCaseToCustomerId">
             @if (Model.Customers.Any())
             {
                 foreach (var cus in Model.Customers)
@@ -19,11 +17,17 @@
             }
         </select>
     </p>
+    @if (Model.HasExtendedCase)
+    {
+        <div>
+            <p class="dh-note">@Translation.GetCoreTextTranslation("Ärendet har ett kopplat Utökat ärende. Endast Ärendet kommer att flyttas.")</p>
+        </div>
+    }
     <div id="externalCustomerNote" style="display:none">
         <p class="dh-note">@Translation.GetCoreTextTranslation("Obs! Ärendet kommer att flyttas till kund som du saknar rättighet till. Du kommer inte åt ärendet efter flytten. Vill du flytta ärendet ändå, eller avbryta?")</p>
     </div>
 </div>
 <div class="modal-footer">
-    <button id="btnMoveCase"  class="btn" data-dismiss="modal" aria-hidden="true">@Translation.Get("Flytta", Enums.TranslationSource.TextTranslation)</button>
-    <button class="btn" data-dismiss="modal" aria-hidden="true">@Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation)</button>
+    <button id="btnMoveCase" class="btn" data-dismiss="modal" aria-hidden="true">@Translation.GetCoreTextTranslation("Flytta")</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">@Translation.GetCoreTextTranslation("Avbryt")</button>
 </div>
